NIHVIVO-1838: In IE6 some content (text) disappear after loading individual pages for foaf person or generic. Changing var applyPositioning = false in supersleight.js change the behavior and content doesn't   disappear (text) anymore. Still working on why PNG images disappear. Also I have fixed some layout issues in IE 6 and IE 7.

--- a/themes/wilma/css/ie7.css
+++ b/themes/wilma/css/ie7.css
@@ -19,11 +19,25 @@
 }
 /* Fix for photo upload */
 input#submit, 
-input#submit:visited{
+input#submit:visited {
     padding: 5px 5px 7px;
     margin-left: -17px;
 }
-/* Fix individual pages */
-#share-contact {
-    width: auto;
+/* Fix for individual pages */
+#individual-intro.person {
+    width: 100%;
+}
+.sparkline_text, 
+.collaboratorship-link-container {
+    width: 148px;
+}
+#individual-intro.person #individual-info {
+    width: 72%;
+}
+#individual-intro .individual-overview {
+    clear: left;
+}
+/* Miscellaneous */
+input#submit, input#submit:visited {
+    margin-left: 0;
 }
