--- a/themes/wilma/css/wilma.css
+++ b/themes/wilma/css/wilma.css
@@ -422,7 +422,7 @@ input.search-vivo {
     color: #5e6363;
     margin-left: 10px;
     margin-top: 5px;
-    padding:0;
+    padding: 0;
 }
 #search-form-modifier {
     display: none;
@@ -771,11 +771,6 @@ p{
     border-radius: 4px; /*This box should have a rounded corners in browsers supporting CSS3*/
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
-    /*    : ;
-    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-    text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.25);*/
     position: relative;
     cursor: pointer;
     border: 0;
@@ -801,7 +796,7 @@ p{
 .button:visited {
     font-size: 16px;
     font-weight: normal;
-    line-height: 1; /*text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);*/
+    line-height: 1;
 }
 .green.button,
 .green.button:visited {
